src/objects/Oscar_Promotion__mdt.object
<CustomObject>
    <description>Used to handle temporary promotions for Agencies</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This promotion is automatically deactivated after this date</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oscar_Process__c</fullName>
        <description>This is the name of the Oscar.Process__c field that will have the promotion</description>
        <label>Oscar Process</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Conditions__c</fullName>
        <description>Contains a SOQL-like to evaluate if this record is applied</description>
        <label>Other Conditions</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <description>Promotion name to apply</description>
        <label>Promotion Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This promotion can only be active after this date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Oscar Promotion</label>
    <listViews>
        <fullName>All_Promotions</fullName>
        <columns>DeveloperName</columns>
        <columns>Promotion_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Oscar_Process__c</columns>
        <columns>Other_Conditions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Promotions</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Oscar Promotions</pluralLabel>
</CustomObject>